# simplecel

./: .env  .gitignore  .travis.yml  README.md  desktop.py  pyproject.toml  web.py
SimpleCel/: __main__.py  browser.py  dir.py  resources.py  views.py
SimpleCel/static/: index.css  index.js  jquery-ui.min.css  jquery-ui.min.js  jquery-ui.structure.min.css  jquery-ui.theme.min.css  showdown.min.js.map
SimpleCel/templates/: index.html
dev/: tryout.py
docs/: user.config.json  user.config.yaml
simplecel/: __init__.py  __main__.py  api.py  browser.py  util.py  views.py
simplecel/static/: default.js  index.css  index.js  renderer.js
simplecel/templates/: index.html
